--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
+        <div class="header">header</div>
+        <div class="aside">aside</div>
+        <div class="section1">section1</div>
+        <div class="section2">section2</div>
+        <div class="section3">section3</div>
+        <div class="footer">footer</div>
     </div>
 </body>
 </html>
